# esp32-tls-test

./: Cargo.toml  cert.pem  cfg.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
certs/: broker.hivemq.com.pem
docs/: README.md
scripts/: flash.sh
src/: main.rs
