[package]
name = "esp32"
version = "0.1.0"
authors = ["Casi McDaniels <casimcdaniels@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32c3-hal = { version = "0.15.0", features = ["embassy", "async", "embassy-executor-thread", "embassy-time-timg0"]  }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = [
    "esp32c3",
    "embassy-net",
    "wifi-logs",
    "wifi",
    "utils",
    "wifi-default",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-hal       = { version = "1.0.0" }
heapless = { version = "0.8.0", default-features = false }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log", "dns"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
] }
embassy-time       = { version = "0.3.0" }
static_cell = { version = "2.0", features = ["nightly"] }
embedded-io-async = { version = "0.6.1" }
embedded-tls = { version = "0.17.0", default-features = false, features = ["alloc", "embedded-io-adapters"]}
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls", features = ["esp32c3", "async"]}
rust-mqtt = { version = "0.3.0", default-features = false }